--- a/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
+++ b/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
@@ -1,4 +1,4 @@
-.manager-detail-main {
+.new-manager-detail-main {
   box-shadow: 0px 3.98437px 23.9062px rgba(213, 199, 199, 0.25) !important;
   border-radius: 11.9531px !important;
   padding: 14px;
@@ -13,12 +13,12 @@
     margin-bottom: 18px;
   }
   .manager-sub-detail {
+    img {
+      height: 72px;
+      width: 72px;
+      margin-bottom: 10px;
+    }
     .profile-info {
-      img {
-        height: 72px;
-        width: 72px;
-        margin-bottom: 10px;
-      }
       .p-title {
         font-family: DM Sans;
         font-style: normal;
@@ -26,7 +26,7 @@
         font-size: 12px;
         line-height: 16px;
         color: #4b686e;
-        margin-bottom: 5px;
+        margin-bottom: 12px;
       }
 
       .profile-action {
@@ -42,15 +42,28 @@
           color: #52a9dd;
         }
         img {
-          width: 11px;
-          height: 11px;
+          width: 15px;
+          height: 15px;
           margin-right: 8px;
         }
       }
     }
-    .personal-info {
+    .new-personal-info {
+      .change-info {
+        display: flex;
+      }
+      .change-title {
+        margin-left: 15px;
+        font-family: DM Sans;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 16px;
+        text-decoration-line: underline;
+        color: #52a9dd;
+      }
       .info {
-        margin-bottom: 14px;
+        margin-bottom: 25px;
         .designation {
           font-family: DM Sans;
           font-style: normal;
