make design of login page and sites

--- a/src/components/sites/sitesItem/sites-item.scss
+++ b/src/components/sites/sitesItem/sites-item.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   border-radius: 11.6836px;
   height: 62px;
-  margin-top: 20px;  
+  margin-bottom: 20px;  
   .item {
     display: flex;
     justify-content: space-between;
