--- a/src/components/commonComponent/commonJobStatus/commonJobStatus.scss
+++ b/src/components/commonComponent/commonJobStatus/commonJobStatus.scss
@@ -16,6 +16,7 @@
   justify-content: flex-end;
   padding-bottom: 10px;
   padding-left: 10px;
+  padding-right: 10px;
   .common-price {
     font-family: Basier Circle;
     font-style: normal;
