--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -26,6 +26,8 @@
     font-size: 12px;
     line-height: 16px;
     color: #52a9dd;
+    height: 30px;
+    margin-right: 10px;
   }
   .filter-buttons {
     margin-right: 10px;
@@ -38,5 +40,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  .MuiInput-underline:before{
+    border-bottom: none;
   }
 }
