--- a/src/components/reactTable/react-table.scss
+++ b/src/components/reactTable/react-table.scss
@@ -34,9 +34,41 @@
     color: #4b686e;
   }
 }
-.filter-outer{
+.filter-outer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 13px;
+}
+.pagination {
+  display: flex;
+  justify-content: flex-end;
+  .MuiListItem-root {
+    width: fit-content;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    color: #52a9dd;
+    cursor: pointer;
+  }
+  .pagination-control {
+    padding: 0px 4px;
+    cursor: pointer;
+    outline: none;
+    min-width: 50px;
+    text-transform: capitalize;
+    background: #fbfbfc;
+    border-radius: 3px;
+    border: none;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    color: #52a9dd;
+    height: 30px;
+    margin-right: 10px;
+  }
 }
