--- a/src/components/commonComponent/commonStatus/commonstatus.scss
+++ b/src/components/commonComponent/commonStatus/commonstatus.scss
@@ -7,4 +7,13 @@
     border-radius: 50%;
     margin-right: 5px;
   }
+  .active-title {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 13px;
+    text-transform: uppercase;
+    color: #0d0d39;
+  }
 }
