improved stying in all pages so far

--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -58,7 +58,7 @@ $v100: 100px;
 $v110: 110px;
 
 .common-title {
-  font-family: Basier Circle;
+  font-family: "BasierCircleReg";
   font-style: normal;
   font-weight: normal;
   font-size: 14.7582px;
