--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -1,18 +1,17 @@
-
 .dashboard-services-main {
   background: #ffffff;
   border: 2px solid #ececec;
   box-sizing: border-box;
   border-radius: 11.6836px;
   padding: 0px 12px;
-  height: 206px;
+  height: 282px;
   .services-main {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     .MuiFormControlLabel-label {
-      font-family: Basier Circle;
+      font-family: "BasierCircleReg";
       font-style: normal;
       font-weight: normal;
       font-size: 14.7582px;
@@ -23,10 +22,10 @@
     }
   }
   .CircularProgressbar-text {
-    font-family: Basier Circle;
+    font-family: "BasierCircleReg";
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 24px !important;
     line-height: 29px;
     display: flex;
     align-items: center;
@@ -38,8 +37,8 @@
     justify-content: space-around;
     padding-top: 20px;
     .circular-progress {
-      width: 112px;
-      height: 112px;
+      width: 180px;
+      height: 180px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -47,7 +46,7 @@
         width: fit-content;
       }
       p {
-        font-family: Basier Circle;
+        font-family: "BasierCircleReg";
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
@@ -62,15 +61,10 @@
     }
     .progress-sub {
       display: flex;
+      align-items: center;
       .order-percentage {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 112px;
-        margin-top: 15px;
         .order-title {
-          font-family: Basier Circle;
+          font-family: "BasierCircleReg";
           font-style: normal;
           font-weight: normal;
           font-size: 12px;
@@ -81,7 +75,7 @@
           color: #52a9dd;
         }
         .orders {
-          font-family: Basier Circle;
+          font-family: "BasierCircleReg";
           font-style: normal;
           font-weight: normal;
           font-size: 10px;
