--- a/src/components/dashboard/filter/dashboardfilter.scss
+++ b/src/components/dashboard/filter/dashboardfilter.scss
@@ -2,7 +2,7 @@
   padding: 5px 0px;
   max-width: 190px;
   .title {
-    font-family: Basier Circle;
+    font-family: 'BasierCircleBold';
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -15,7 +15,7 @@
     display: flex;
     margin-top: 18px;
     .postcode {
-      font-family: Basier Circle;
+      font-family: 'BasierCircleReg';
       font-style: normal;
       font-weight: normal;
       font-size: 13px;
