--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
 @font-face {
-  font-family: "basier";
-  src: local("basier"), url("./assets/fonts/basier.ttf") format("truetype");
-  font-weight: bold;
+  font-family: "BasierCircleBold";
+  src: local("BasierCircleBold"),
+    url("./assets/fonts/BasierCircle-Bold.woff") format("woff");
 }
 
-
-
+@font-face {
+  font-family: "BasierCircleReg";
+  src: local("BasierCircleReg"),
+    url("./assets/fonts/BasierCircle-Regular.woff") format("woff");
+}
