--- a/src/components/commonComponent/commonSearch/commonSearch.scss
+++ b/src/components/commonComponent/commonSearch/commonSearch.scss
@@ -1,28 +1,27 @@
 .search-bar-container {
-    display: flex;
-    align-items: center; 
-    img { 
-      height: 15px;
-    }
-  
-    input {
-      padding: 3px 5px;
-      border: none;
-      outline: none;
-      font-family: Basier Circle;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 10px;
-      line-height: 12px;
-      display: flex;
-      align-items: center;
-      color: #8B8B8B;
-  
-      &::placeholder {
-        text-transform: capitalize;
-        text-transform: capitalize;
-        font-size: 12px;
-      }
-    }
-  
+  display: flex;
+  align-items: center;
+  img {
+    height: 15px;
   }
+
+  input {
+    padding: 3px 5px;
+    border: none;
+    outline: none;
+    font-family: "BasierCircleReg";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    color: #8b8b8b;
+
+    &::placeholder {
+      text-transform: capitalize;
+      text-transform: capitalize;
+      font-size: 12px;
+    }
+  }
+}
