--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -6,31 +6,27 @@
   .MuiCardContent-root {
     padding: 12px 12px;
   }
-  .MuiBox-root-12{
-    height: 106px;
+  .MuiInput-underline:hover:not(.Mui-disabled):before {
+    border-bottom: 1px solid #52a9dd;
   }
   .salesWp {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
-
     .salesPrice {
       display: flex;
       align-items: center;
       gap: 10px;
-
       h1 {
         margin: 0px;
       }
     }
-
     .dateWp {
       display: flex;
       gap: 10px;
-
       p {
-        font-family: DM Sans;
+        font-family: "DM Sans";
         font-style: normal;
         font-weight: bold;
         font-size: 12px;
@@ -39,13 +35,13 @@
         opacity: 0.5;
         margin-right: 15px;
       }
-
       .dropdown {
         border-radius: 3px;
         border: 1px solid #52a9dd;
         font-weight: bold;
         padding-left: 10px;
         text-decoration: none;
+        border-bottom: 0px;
         .MuiSelect-select:focus {
           background-color: transparent;
         }
@@ -55,17 +51,10 @@
       }
     }
   }
-
-  canvas {
-    width: 100% !important;
-    height: 106px !important;
-  }
   .MuiCardContent-root:last-child{
     padding-bottom: 10px !important;
   }
-
-  // .MuiSvgIcon-root{
-  //   display: none;
-  // }
-  
+  .MuiInput-underline:before {
+    border-bottom: 1px solid #52a9dd !important;
+  }
 }
