--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -4,9 +4,8 @@
 }
 .landfill {
   margin: 11px 0px;
-  font-family: Basier Circle;
+  font-family: "BasierCircleBold";
   font-style: normal;
-  font-weight: bold;
   font-size: 14px;
   line-height: 17px;
   display: flex;
@@ -34,12 +33,10 @@ hr {
   }
   h1 {
     margin-left: 10px;
-    font-family: Basier Circle;
+    font-family: "BasierCircleBold";
     font-style: normal;
-    font-weight: bold;
     font-size: 14px;
     line-height: 17px;
-
     color: #0d0d39;
   }
 
