--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -84,3 +84,9 @@
     margin-right: 10px;
   }
 }
+
+.common-search-for-tables{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
