--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -1,4 +1,5 @@
-.MuiTable-root {
+.table-main {
+  table-layout: fixed;
   .MuiTableCell-root {
     border-bottom: none;
   }
@@ -31,6 +32,7 @@
     font-size: 10px;
     line-height: 13px;
     color: #4b686e;
+    // width: fit-content;
   }
   .custom-filter {
     padding: 0px 4px;
@@ -85,7 +87,7 @@
   }
 }
 
-.common-search-for-tables{
+.common-search-for-tables {
   display: flex;
   justify-content: space-between;
   align-items: center;
