--- a/src/components/jobsDetail/jobStatus/smartJosStatus.scss
+++ b/src/components/jobsDetail/jobStatus/smartJosStatus.scss
@@ -14,8 +14,19 @@
       text-align: center;
       color: #0d0d39;
     }
+    .label-date {
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 11.7639px;
+      line-height: 15px;
+      text-align: center;
+      margin-top: 5px;
+      color: #0d0d39;
+    }
   }
 }
+
 .disbale-label-text {
   font-family: DM Sans !important;
   text-align: center !important;
