fix some ui issues

--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -5,6 +5,8 @@
   border-radius: 11.6836px;
   padding: 0px 12px;
   height: 331px;
+  margin-right: 10px;
+  width: 60%;
   .services-main {
     display: flex;
     justify-content: space-between;
