--- a/src/components/jobsDetail/jobStatus/smartJosStatus.scss
+++ b/src/components/jobsDetail/jobStatus/smartJosStatus.scss
@@ -26,7 +26,9 @@
     }
   }
 }
-
+.makeStyles-completed-298 {
+  margin-top: 5px;
+}
 .disbale-label-text {
   font-family: DM Sans !important;
   text-align: center !important;
@@ -114,4 +116,8 @@
   line-height: 23px;
 
   color: #0d0d39;
+}
+.makeStyles-root-16 {
+  margin-top: 5px;
+  margin-left: -5px !important;
 }
