--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -52,4 +52,10 @@ hr {
       }
     }
   }
+ 
+}
+.spend-service-main{
+  display: flex;
+  justify-content: space-between !important;
+  align-items: center;
 }
