--- a/src/components/modals/createJob/createJob.scss
+++ b/src/components/modals/createJob/createJob.scss
@@ -232,13 +232,13 @@
   letter-spacing: 2px;
   padding: 8px 24px;
   margin-top: 16px;
-  background: #0176ff;
+  background: #29a7df;
   text-transform: capitalize;
   font-size: 14px;
   margin-bottom: 20px;
 
   &:hover {
-    background: #0176ff;
+    background: #29a7df;
     box-shadow: none;
   }
 
