redering data using redux implimented

--- a/src/components/modals/createJob/createJob.scss
+++ b/src/components/modals/createJob/createJob.scss
@@ -103,7 +103,7 @@
     align-items: flex-end;
     position: relative;
     top: -8px;
-
+    font-family: DM Sans;
     label {
       color: #fff;
       background-color: #0c7cd5;
