--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -27,6 +27,7 @@
     color: #52a9dd;
     height: 30px;
     margin-right: 10px;
+    width: 100%;
   }
   .filter-buttons {
     margin-right: 10px;
