--- a/src/components/modals/createExchange/createExchange.scss
+++ b/src/components/modals/createExchange/createExchange.scss
@@ -1,4 +1,8 @@
 .createExchangeModal {
+  form{
+    font-family: DM Sans;
+    font-weight: bold;
+  }
   .MuiOutlinedInput-input {
     padding: 12px 14px;
   }
