--- a/src/components/modals/createJob/createJob.scss
+++ b/src/components/modals/createJob/createJob.scss
@@ -1,6 +1,6 @@
 .creatJobModal {
   form{
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: DM Sans
   }
   .MuiPaper-root {
     border-radius: 32px;
@@ -92,7 +92,8 @@
   display: flex;
   justify-content: space-between;
   gap: 40px;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: DM Sans;
+  font-weight: bold;
 
   p {
     margin-top: 10px;
