--- a/src/components/reactTable/pagination.scss
+++ b/src/components/reactTable/pagination.scss
@@ -5,7 +5,8 @@
   align-items: center;
   margin-right: 2.5%;
   .MuiTablePagination-actions{
-    display: block ruby;
+    display: flex;
+    margin: 0 1%;
     width: 4%;
   }
 }
