create new site manager and design their detail page done

--- a/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
+++ b/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
@@ -2,7 +2,7 @@
   box-shadow: 0px 3.98437px 23.9062px rgba(213, 199, 199, 0.25) !important;
   border-radius: 11.9531px !important;
   padding: 14px;
-
+  text-align: start;
   .title {
     font-family: DM Sans;
     font-style: normal;
