--- a/src/containers/mainJobs/mainjobs.scss
+++ b/src/containers/mainJobs/mainjobs.scss
@@ -29,3 +29,12 @@
     color: #0d0d39;
   }
 }
+
+.sites-header-title {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 42px;
+  color: #0d0d39;
+}
