--- a/src/containers/mainSiteManagers/sitemanager.scss
+++ b/src/containers/mainSiteManagers/sitemanager.scss
@@ -28,3 +28,12 @@
   justify-content: space-around ;
   flex-wrap: wrap ;
 }
+
+.site-error{
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  color: red;
+}
