--- a/src/containers/mainSites/sites.scss
+++ b/src/containers/mainSites/sites.scss
@@ -4,3 +4,8 @@
     align-items: center;
     margin-bottom: 13px;
 }
+.sites-table-loader{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
