create assign manager modal and done all other tasks

--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -111,6 +111,7 @@ $v110: 110px;
   line-height: 16px;
   cursor: pointer;
   padding: 5px 15px;
+  margin-left: 15px;
 }
 .header-link {
   font-family: DM Sans;
