--- a/src/components/commonComponent/commonHeader.scss
+++ b/src/components/commonComponent/commonHeader.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 15px;
     .view-icon {
       margin-right: 3px;
     }
@@ -16,12 +17,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 25%;
   }
   .header-children {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 40%;
   }
 }
