--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -62,3 +62,11 @@ hr {
 .main-loading{
  width: 100%;
 }
+.dashboard-menu{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  margin-top: 300px;
+}
