fix dashboard services on customer portal

--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   border-radius: 12px !important;
   box-shadow: none !important;
-  
+  width: 40%;
   margin: 20px 10px;
   .MuiCardContent-root {
     padding: 12px 12px;
