--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
     font-family: "DM Sans";
     font-style: normal;
     font-weight: bold;
-    font-size: 60px;
+    font-size: 3.7em;
     line-height: 72px;
     text-align: center;
     color: #0f2851;
@@ -20,5 +20,13 @@
     text-align: center;
     color: #0f2851;
     padding: 0px 40px;
+  }
+}
+@media (max-width: 1024px) and (min-width: 1px){
+  .header-text-section {
+    .header-title {
+      font-size: 2.5em;
+      line-height: 50px;
+    }
   }
 }
