--- a/src/containers/registration/SignIn/signin.scss
+++ b/src/containers/registration/SignIn/signin.scss
@@ -3,7 +3,7 @@
   border-bottom-left-radius: 80px;
   border-bottom-right-radius: 80px;
   .login-section {
-    width: 508px;
+    width: 20%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -22,6 +22,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      width: 100%;
       .MuiInputBase-input {
         background-color: transparent;
       }
@@ -29,7 +30,7 @@
         padding-left: 0px;
       }
       .MuiInputBase-root {
-        width: 400px;
+        width: 100%;
         border-radius: 45px;
         margin-bottom: 16px;
         .MuiTypography-root {
@@ -42,15 +43,18 @@
       }
       .MuiFormControl-root {
         margin: 0px;
+        width: 100%;
+        padding: 5%;
       }
     }
     .login-next-btn {
       padding-top: 23px;
       padding-bottom: 24px;
+      width: 100%;
       .MuiButton-root {
         border-radius: 64px;
         background: #36b8fc;
-        width: 400px;
+        width: 100%;
         height: 48px;
       }
       .MuiButton-label {
@@ -82,4 +86,25 @@
 
 .main {
   background: #36b8fc;
+}
+@media (max-width: 1024px) and (min-width: 769px){
+  .login-main {
+    .login-section {
+      width: 45%;
+    }
+  }
+}
+@media (max-width: 768px) and (min-width: 426px){
+  .login-main {
+    .login-section {
+      width: 50%;
+    }
+  }
+}
+@media (max-width: 425px) and (min-width: 1px){
+  .login-main {
+    .login-section {
+      width: 90%;
+    }
+  }
 }
