--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@ body{
   margin: 0;
   padding: 0;
 }
+.main{
+  overflow: hidden;
+}
 @font-face {
   font-family: "BasierCircleBold";
   src: local("BasierCircleBold"),
