create driver directions on google map

--- a/src/containers/mainJobs/mainjobs.scss
+++ b/src/containers/mainJobs/mainjobs.scss
@@ -38,3 +38,11 @@
   line-height: 42px;
   color: #0d0d39;
 }
+
+.jobs-not-found{
+  font-family: DM Sans;
+  font-style: normal;
+  font-size: 20px;
+  color: red;
+  text-align: center;
+}
