--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -147,7 +147,8 @@ $v110: 110px;
   font-weight: normal;
   font-size: 10px;
   line-height: 13px;
-
+  display: contents;
+  font-weight: bolder;
   color: #29aae2;
 }
 // info window of google map
