--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -41,7 +41,7 @@
   }
   .table-body-cell:last-child {
     display: flex;
-    align-self: flex-end;
+    align-self: center;
     width: 50px !important;
     padding: 10px !important;
   }
