update reports button opacity

--- a/src/components/reports/report.scss
+++ b/src/components/reports/report.scss
@@ -31,7 +31,7 @@
   .generate-report-disable {
     background: #52a9dd;
     color: white;
-    opacity: 50%;
+    opacity: 0.8;
     .MuiCircularProgress-root {
       position: absolute;
       color: #fff;
