update button hover from report and fix minor issue

--- a/src/components/reports/report.scss
+++ b/src/components/reports/report.scss
@@ -28,6 +28,9 @@
       color: #fff;
     }
   }
+  .MuiButton-contained:hover {
+    background: #52a9dd;
+  }
   .generate-report-disable {
     background: #52a9dd;
     color: white;
