add validation on create manager

--- a/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
+++ b/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
@@ -61,6 +61,7 @@
         line-height: 16px;
         text-decoration-line: underline;
         color: #52a9dd;
+        cursor: pointer;
       }
       .info {
         margin-bottom: 25px;
