--- a/src/components/sites/sitesTable/sites-table.scss
+++ b/src/components/sites/sitesTable/sites-table.scss
@@ -42,3 +42,16 @@
     padding: 10px;
   }
 }
+.sites-header-btn {
+  background: #52a9dd;
+  border-radius: 64px;
+  border: none;
+  color: #fff;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  cursor: pointer;
+  padding: 5px 15px;
+}
