--- a/src/components/siteManager/siteManagerDetailPage/siteManagerDetailPage.scss
+++ b/src/components/siteManager/siteManagerDetailPage/siteManagerDetailPage.scss
@@ -14,4 +14,8 @@
     .site-manager-filter{
         margin-top: 20px;
     }
+    .po-detail-page{
+        width: 100%;
+        margin-top: 20px;
+    }
 }
