add m3 and quantity of weeks in create job

--- a/src/components/modals/createJob/createJob.scss
+++ b/src/components/modals/createJob/createJob.scss
@@ -510,3 +510,10 @@
   margin-bottom: 18px;
 }
 
+.m3-error {
+  color: red;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-size: 10px;
+  margin-top: 5px;
+}
