add filters into site detail

--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -44,4 +44,9 @@
   .MuiInput-underline:before{
     border-bottom: none;
   }
+
+  .date-picker-filter{
+    position: absolute !important;
+    top: 100% !important;
+  }
 }
