accept and reject job done

--- a/src/components/sites/sitesTable/sites-table.scss
+++ b/src/components/sites/sitesTable/sites-table.scss
@@ -55,3 +55,16 @@
   cursor: pointer;
   padding: 5px 15px;
 }
+.sites-header-btn-error{
+  background: #e21406;
+  border-radius: 64px;
+  border: none;
+  color: #fff;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  cursor: pointer;
+  padding: 5px 15px;
+}
