--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -97,3 +97,9 @@
     border-radius: 11px;
   }
 }
+.accept-reject{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
