--- a/src/components/modals/acceptJobModal/acceptJob.scss
+++ b/src/components/modals/acceptJobModal/acceptJob.scss
@@ -1,23 +1,25 @@
-.info {
-  margin-bottom: 14px;
-  display: flex;
-  justify-content: space-between;
-  
-  .designation {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 16px;
-    color: #4b686e;
-  }
+.acceptmodal {
+  .info {
+    margin-bottom: 14px;
+    display: flex;
+    justify-content: space-between;
 
-  .personal-title {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    color: #4b686e;
+    .designation {
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 16px;
+      color: #4b686e;
+    }
+
+    .personal-title {
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 16px;
+      color: #4b686e;
+    }
   }
 }
