fix ui issue from sites detail page

--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -40,13 +40,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
   }
   .MuiInput-underline:before{
     border-bottom: none;
-  }
-
-  .date-picker-filter{
-    position: absolute !important;
-    top: 100% !important;
   }
 }
